--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
     "react-input-range": "^1.3.0",
     "react-outside-event": "~1.2.4",
     "react-paginate": "^5.0.0",
+    "react-particles-js": "^2.7.1",
     "react-refetch": "^1.0.0-beta.10",
     "react-remarkable": "^1.1.1",
     "react-router": "^2.6.1",
